--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,24 +9,31 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.QuizPractise">
-        <activity android:name=".ResultActivity"
+        <activity
+            android:name=".SpalshScreen"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar">
+
+            <intent-filter>
+
+                <action android:name="android.intent.action.MAIN"/>
+                <category android:name="android.intent.category.LAUNCHER"/>
+
+            </intent-filter>
+        </activity>
+        <activity
+            android:name=".ResultActivity"
             android:screenOrientation="portrait"
-            android:theme="@style/NoActionBarTheme"
-            ></activity>
-        <activity android:name=".QuizQuestionActivity"
+            android:theme="@style/NoActionBarTheme" />
+        <activity
+            android:name=".QuizQuestionActivity"
             android:screenOrientation="portrait"
-            android:theme="@style/NoActionBarTheme"
-            />
+            android:theme="@style/NoActionBarTheme" />
         <activity
             android:name=".MainActivity"
             android:screenOrientation="portrait"
             android:theme="@style/NoActionBarTheme"
             android:windowSoftInputMode="adjustResize">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
     </application>
 
